Поправил свойство анимации для сафари :(

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -381,10 +381,10 @@ body {
 }
 @keyframes rotate {
   0% {
-    rotate: 0deg;
+    transform: rotate(0deg);
   }
   100% {
-    rotate: -360deg;
+    transform: rotate(-360deg);
   }
 }
 
