--- a/assets/scss/blocks/_welcom-block.scss
+++ b/assets/scss/blocks/_welcom-block.scss
@@ -270,11 +270,11 @@
 
         @keyframes rotate {
             0% {
-                rotate: 0deg;
+                transform: rotate(0deg);
             }
             
             100% {
-                rotate: -360deg;
+                transform: rotate(-360deg);
             }
         }
     }
